color the contrast ratio labels + minor bug fix when switching to hsl

--- a/src/ColorControls.module.css
+++ b/src/ColorControls.module.css
@@ -5,7 +5,7 @@
   gap: 0.5rem;
   width: 13rem;
   color: white;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.6);
 }
 
 .ColorBlock {
